--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"bits-ui": "^0.21.1",
 		"clsx": "^2.1.0",
 		"lodash": "^4.17.21",
+		"mongodb": "^6.5.0",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
